Third commit with aditional implementations.